# gsp-toolkit

./: README.md
desktop/: .gitignore  README.md  gsp.yaml  pyproject.toml
desktop/gsp_toolkit/: codec.py  crc.py  events.py
desktop/gsp_toolkit.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
desktop/gsp_toolkit/transport/: tcp.py
desktop/src/cli/: main.py
desktop/src/cli/commands/: erase.py  write.py
desktop/src/gsp_cli/: interactive.py  main.py  transport.py
desktop/src/gsp_cli/commands/: erase.py  write.py
desktop/src/gsp_cli/commands/bootloader_ops/: erase.py  write.py
desktop/src/gsp_cli/commands/messaging/: message.py
desktop/src/gsp_core/: config.py  events.py
desktop/src/gsp_core/client/: base.py  highlevel.py
desktop/src/gsp_core/client/commands/bootloader_ops/: abort.py  erase.py  reset.py  verify.py  write.py
desktop/src/gsp_core/client/commands/messaging/: message.py
desktop/src/gsp_core/protocol/: codec.py  commands.py  cra.py  crc.py  dtl.py  ports.py  slip.py
desktop/src/gsp_core/transport/: tcp.py  uart.py
desktop/src/gsp_toolkit/: dtl.py  highlevel.py  ports.py  slip.py
desktop/src/gsp_toolkit/transport/: uart.py
desktop/tests/: test_codec.py  test_crc.py  test_dtl.py  test_events.py  test_slip.py  test_tcp.py  test_uart.py
docs/: README.md
docs/puml/: gsp_reset_and_run_sequence.puml  gsp_single_command_ack_miss_sequence.puml  gsp_single_command_corrupted_response_sequence.puml  gsp_single_command_duplicate_ack.puml  gsp_single_corrupted_command_sequence.puml  gsp_verify_chunk_sequence.puml
(+6 files in other folders)
